add homepage & fix user-register

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -100,7 +100,7 @@
             </a>
           </li> 
           <li class="">
-            <a routerLink="user-register" routerLinkActive="active" title="user-register">
+            <a routerLink="/user-register" routerLinkActive="active" title="user-register">
               <span class="glyphicon glyphicon-log-in" aria-hidden="true"></span>
               <span>Sign up</span>
             </a>
