--- a/src/app/user-register/user-register.component.html
+++ b/src/app/user-register/user-register.component.html
@@ -2,14 +2,9 @@
   <div class="container xd-container">
     <h2>User Register</h2>
     <form id="login" class="form-horizontal" (ngSubmit)="onSubmit(loginForm.value)" #loginForm="ngForm">
-      <!--
-      <div class="form-group" hidden="true">
-        <input type="text" hidden="true" class="form-control" id="id" [(ngModel)]="user.id" name="id"/>
-      </div>
-      -->
       <div class="form-group has-feedback">
         <div class="form-group ">
-          <label class="col-sm-1 control-label">Login</label>
+          <label class="col-sm-1 control-label">Username</label>
           <div class="col-sm-6">
             <input id="username" name="username" class="form-control" type="text" [(ngModel)]="user.username"/>
           </div>
@@ -35,4 +30,5 @@
     </form>
   </div>
 </div>
+
 <router-outlet></router-outlet>
