--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -6,16 +6,11 @@
   <div class="container xd-container">
     <h2>Enter login and password</h2>
     <form id="login" class="form-horizontal" (ngSubmit)="onSubmit(loginForm.value)" #loginForm="ngForm">
-      <!--
-      <div class="form-group" hidden="true">
-        <input type="text" hidden="true" class="form-control" id="id" [(ngModel)]="user.id" name="id"/>
-      </div>
-      -->
       <div class="form-group has-feedback">
         <div class="form-group ">
           <label class="col-sm-1 control-label">Login</label>
           <div class="col-sm-6">
-            <input id="username" name="username" class="form-control" type="text" [(ngModel)]="user.username"/>
+            <input id="userName" name="userName" class="form-control" type="text" [(ngModel)]="user.username"/>
           </div>
         </div>
         <div class="form-group ">
