--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -10,13 +10,13 @@
         <div class="form-group ">
           <label class="col-sm-1 control-label">Login</label>
           <div class="col-sm-6">
-            <input id="userName" name="userName" class="form-control" type="text" [(ngModel)]="user.username"/>
+            <input id="username" name="userName" class="form-control" type="text" [(ngModel)]="userName"/>
           </div>
         </div>
         <div class="form-group ">
           <label class="col-sm-1 control-label">Password</label>
           <div class="col-sm-6">
-            <input id="password" name="password" class="form-control" type="text" [(ngModel)]="user.password"/>
+            <input id="password" name="password" class="form-control" type="text" [(ngModel)]="password"/>
           </div>
         </div>
         <div class="form-group">
@@ -34,4 +34,5 @@
     </form>
   </div>
 </div>
+
 <router-outlet></router-outlet>
