--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -30,8 +30,8 @@
               <span>Home</span>
             </a>
           </li>
-    
-          <li class="dropdown">
+         
+          <li  class="dropdown">
             <a class="dropdown-toggle" data-toggle="dropdown" role="button"
                aria-haspopup="true" aria-expanded="false">Owners<span class="caret"></span>
             </a>
@@ -42,6 +42,7 @@
               </li>
             </ul>
           </li>
+          <!-- *ngIf="!isUserLoggedIn" -->
           <li class="dropdown">
             <a class="dropdown-toggle" data-toggle="dropdown" role="button"
                aria-haspopup="true" aria-expanded="false">Veterinarians<span class="caret"></span>
