--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -4,13 +4,13 @@
 
 <div class="container-fluid">
   <div class="container xd-container">
-    <h2>Enter login and password</h2>
+    <h2>Enter IdentityId and Password</h2>
     <form id="login" class="form-horizontal" (ngSubmit)="onSubmit(loginForm.value)" #loginForm="ngForm">
       <div class="form-group has-feedback">
         <div class="form-group ">
-          <label class="col-sm-1 control-label">Login</label>
+          <label class="col-sm-1 control-label">IdentityId</label>
           <div class="col-sm-6">
-            <input id="username" name="userName" class="form-control" type="text" [(ngModel)]="userName"/>
+            <input id="identityid" name="identityid" class="form-control" type="text" [(ngModel)]="identityid"/>
           </div>
         </div>
         <div class="form-group ">
@@ -20,13 +20,16 @@
           </div>
         </div>
         <div class="form-group">
-          <div class="col-sm-offset-1 col-sm-10" >
+          <div class="col-sm-offset-1 col-sm-9" >
             <div class="col-sm-1">
-           <button class="btn btn-default" type="submit" >Login</button>
+              <button class="btn btn-default" type="submit" >Login</button>              
             </div>
             <div class="col-sm-1">
-           <button class="btn btn-default " type="button" (click)="gotoMain()">Cancel</button>
+              <button class="btn btn-default " type="button" (click)="gotoRegister()">Register</button>
             </div>
+            <!-- <div class="col-sm-1">
+              <button class="btn btn-default " type="button" (click)="gotoMain()">Cancel</button>
+            </div> -->
           </div>
 
         </div>
@@ -34,5 +37,4 @@
     </form>
   </div>
 </div>
-
 <router-outlet></router-outlet>
