--- a/src/app/user-register/user-register.component.html
+++ b/src/app/user-register/user-register.component.html
@@ -1,18 +1,18 @@
 <div class="container-fluid">
   <div class="container xd-container">
     <h2>User Register</h2>
-    <form id="login" class="form-horizontal" (ngSubmit)="onSubmit(loginForm.value)" #loginForm="ngForm">
+    <form id="register" class="form-horizontal" (ngSubmit)="onSubmit(registerForm.value)" #registerForm="ngForm">
       <div class="form-group has-feedback">
         <div class="form-group ">
-          <label class="col-sm-1 control-label">Username</label>
+          <label class="col-sm-1 control-label">IdentityId</label>
           <div class="col-sm-6">
-            <input id="username" name="username" class="form-control" type="text" [(ngModel)]="user.username"/>
+            <input id="identityid" name="identityid" class="form-control" type="text" [(ngModel)]="identityid"/>
           </div>
         </div>
         <div class="form-group ">
           <label class="col-sm-1 control-label">Password</label>
           <div class="col-sm-6">
-            <input id="password" name="password" class="form-control" type="text" [(ngModel)]="user.password"/>
+            <input id="password" name="password" class="form-control" type="password" [(ngModel)]="password"/>
           </div>
         </div>
         <div class="form-group">
