add user module & fix signin & signup

--- a/src/app/appointment/appointment-list/appointment-list.component.html
+++ b/src/app/appointment/appointment-list/appointment-list.component.html
@@ -5,8 +5,8 @@
       <table class="table table-striped">
         <thead>
         <tr>
-          <th>Owner</th>
-          <th>Telephone</th>
+          <!-- <th>Owner</th>
+          <th>Telephone</th> -->
           <th>Pet Name</th>
           <th>Pet Type</th>
           <th>Reserve Date</th>
