--- a/src/app/users/signup/signup.component.html
+++ b/src/app/users/signup/signup.component.html
@@ -1,9 +1,9 @@
-
-
-
+<!-- <p>
+  signup works!
+</p> -->
 <div class="container-fluid">
   <div class="container xd-container">
-    <h2>User Register</h2>
+    <h2>User Signup</h2>
     <form id="register" class="form-horizontal" (ngSubmit)="onSubmit(registerForm.value)" #registerForm="ngForm">
       <div class="form-group has-feedback">
         <div class="form-group ">
@@ -35,4 +35,3 @@
 </div>
 
 <router-outlet></router-outlet>
-
