--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -89,13 +89,13 @@
             </ng-template>
           </li> -->
           <li class="">
-            <a routerLink="/login" routerLinkActive="active" title="login">
+            <a routerLink="/signin" routerLinkActive="active" title="login">
               <span class="glyphicon glyphicon-user" aria-hidden="true"></span>
               <span>Sign in</span>
             </a>
           </li> 
           <li class="">
-            <a routerLink="/user-register" routerLinkActive="active" title="user-register">
+            <a routerLink="/signup" routerLinkActive="active" title="signup">
               <span class="glyphicon glyphicon-log-in" aria-hidden="true"></span>
               <span>Sign up</span>
             </a>
