--- a/src/app/appointment/appointment-add/appointment-add.component.html
+++ b/src/app/appointment/appointment-add/appointment-add.component.html
@@ -9,16 +9,16 @@
         <input type="text" hidden="true" class="form-control" id="owner" [(ngModel)]="pet.owner" name="owner"/>
       </div>
       <!-- Owner Name -->
-      <div class="form-group">
+      <!-- <div class="form-group">
         <label for="owner" class="col-sm-2 control-label">Owner</label>
         <div class="col-sm-10">
           <input id="owner_name" name="owner_name" class="form-control" type="text"
                  value="{{ currentOwner.firstName }} {{ currentOwner.lastName }}" readonly/>
         </div>
       </div>
-      <br/>
+      <br/> -->
       <!-- Owner Telephone -->
-      <div class="form-group has-feedback" [class.has-success]="telephone.dirty && telephone.valid" [class.has-error]="telephone.dirty && !telephone.valid">
+      <!-- <div class="form-group has-feedback" [class.has-success]="telephone.dirty && telephone.valid" [class.has-error]="telephone.dirty && !telephone.valid">
         <label for="telephone" class="col-sm-2 control-label">Telephone</label>
         <div class="col-sm-10">
           <input type="text" class="form-control" id="telephone" [(ngModel)]="owner.telephone" name="telephone" required maxlength="10" pattern="^[0-9]{0,10}$" #telephone="ngModel"/>
@@ -28,7 +28,7 @@
           <span class="help-block" *ngIf="telephone.dirty && telephone.hasError('pattern')" >Phone number only accept digits</span>
         </div>
       </div>
-      <br/>
+      <br/> -->
       <!-- Pet Name -->
       <div class="form-group ">
         <label for="name" class="col-sm-2 control-label">Pet Name</label>
