Signup API done

--- a/src/app/users/signin/signin.component.html
+++ b/src/app/users/signin/signin.component.html
@@ -49,7 +49,7 @@
               <button class="btn btn-default" type="submit" >Login</button>              
             </div>
             <div class="col-sm-1">
-              <button class="btn btn-default " type="button" (click)="gotoRegister()">Register</button>
+              <button class="btn btn-default " type="button" (click)="gotoRegister()">Go To Sign Up Page</button>
             </div>
             <!-- <div class="col-sm-1">
               <button class="btn btn-default " type="button" (click)="gotoMain()">Cancel</button>
