--- a/src/app/users/signup/signup.component.html
+++ b/src/app/users/signup/signup.component.html
@@ -1,15 +1,15 @@
 <!-- <p>
   signup works!
 </p> -->
-<div class="container-fluid">
+<!-- <div class="container-fluid">
   <div class="container xd-container">
     <h2>User Signup</h2>
-    <form id="register" class="form-horizontal" (ngSubmit)="onSubmit(registerForm.value)" #registerForm="ngForm">
+    <form id="signup" class="form-horizontal" (ngSubmit)="onSubmit(signupForm.value)" #signupForm="ngForm">
       <div class="form-group has-feedback">
         <div class="form-group ">
-          <label class="col-sm-1 control-label">IdentityId</label>
+          <label class="col-sm-1 control-label">Username</label>
           <div class="col-sm-6">
-            <input id="identityid" name="identityid" class="form-control" type="text" [(ngModel)]="identityid"/>
+            <input id="username" name="username" class="form-control" type="text" [(ngModel)]="username"/>
           </div>
         </div>
         <div class="form-group ">
@@ -32,6 +32,32 @@
       </div>
     </form>
   </div>
-</div>
+</div> -->
+<div class="container-fluid">
+  <div class="container xd-container">
+    <h2>User Signup</h2>
+    <form id="signup" class="form-horizontal" (ngSubmit)="onSubmit(signupForm.value)" #signupForm="ngForm">
+      <div class="form-group has-feedback">
+        <label for="firstName" class="col-sm-2 control-label"> Username</label>
+        <div class="col-sm-10">
+          <input type="text" class="form-control" id="username" [(ngModel)]="user.username" minlength="2" required name="username" #usertName="ngModel"/>
+        </div>
+      </div>
+      <div class="form-group has-feedback">
+        <label for="lastName" class="col-sm-2 control-label">Password</label>
+        <div class="col-sm-10">
+          <input type="text" class="form-control" id="password" [(ngModel)]="user.password" name="password" minlength="2" required #password="ngModel"/>
+        </div>
+      </div>
+      <div class="form-group">
+        <div class="col-sm-offset-2 col-sm-10">
+          <br/>
+          <button class="btn btn-default" type="submit">Register</button>
+          <button class="btn btn-default" type="button" (click)="gotoMain()">Cancel</button>
 
+        </div>
+      </div>
+    </form>
+  </div>
+</div>
 <router-outlet></router-outlet>
