--- a/src/app/users/signin/signin.component.html
+++ b/src/app/users/signin/signin.component.html
@@ -28,13 +28,13 @@
 
 <div class="container-fluid">
   <div class="container xd-container">
-    <h2>Enter IdentityId and Password</h2>
+    <h2>Enter Username and Password</h2>
     <form id="signin" class="form-horizontal" (ngSubmit)="onSubmit(signinForm.value)" #signinForm="ngForm">
       <div class="form-group has-feedback">
         <div class="form-group ">
-          <label class="col-sm-1 control-label">IdentityId</label>
+          <label class="col-sm-1 control-label">Username</label>
           <div class="col-sm-6">
-            <input id="identityid" name="identityid" class="form-control" type="text" [(ngModel)]="identityid"/>
+            <input id="username" name="username" class="form-control" type="text" [(ngModel)]="username"/>
           </div>
         </div>
         <div class="form-group ">
