--- a/src/app/users/signup/signup.component.html
+++ b/src/app/users/signup/signup.component.html
@@ -49,6 +49,38 @@
           <input type="text" class="form-control" id="password" [(ngModel)]="user.password" name="password" minlength="2" required #password="ngModel"/>
         </div>
       </div>
+<!--       
+      <div class="form-group has-feedback">
+        <label for="firstName" class="col-sm-2 control-label">First Name</label>
+        <div class="col-sm-10">
+          <input type="text" class="form-control" id="firstName" [(ngModel)]="owner.firstName" name="firstName" minlength="2" required #firstName="ngModel"/>
+        </div>
+      </div>
+      <div class="form-group has-feedback">
+        <label for="lastName" class="col-sm-2 control-label">Last Name</label>
+        <div class="col-sm-10">
+          <input type="text" class="form-control" id="lastName" [(ngModel)]="owner.lastName" name="lastName" minlength="2" required #lastName="ngModel"/>
+        </div>
+      </div>
+      <div class="form-group has-feedback">
+        <label for="address" class="col-sm-2 control-label">Address</label>
+        <div class="col-sm-10">
+          <input type="text" class="form-control" id="address" [(ngModel)]="owner.address" name="address" minlength="2" required #address="ngModel"/>
+        </div>
+      </div>
+      <div class="form-group has-feedback">
+        <label for="city" class="col-sm-2 control-label">City</label>
+        <div class="col-sm-10">
+          <input type="text" class="form-control" id="city" [(ngModel)]="owner.city" name="city" minlength="2" required #city="ngModel"/>
+        </div>
+      </div>
+      <div class="form-group has-feedback">
+        <label for="telephone" class="col-sm-2 control-label">Telephone</label>
+        <div class="col-sm-10">
+          <input type="text" class="form-control" id="telephone" [(ngModel)]="owner.telephone" name="telephone" minlength="2" required #telephone="ngModel"/>
+        </div>
+      </div>
+       -->
       <div class="form-group">
         <div class="col-sm-offset-2 col-sm-10">
           <br/>
