--- a/src/app/appointment/appointment-add/appointment-add.component.html
+++ b/src/app/appointment/appointment-add/appointment-add.component.html
@@ -4,10 +4,10 @@
       Pet Appointment
     </h2>
     <form class="form-horizontal" (ngSubmit)="onSubmit(appointmentForm.values)" #appointmentForm="ngForm">
-      <div class="form-group" hidden="true">
+      <!-- <div class="form-group" hidden="true">
         <input type="text" hidden="true" class="form-control" id="id" [(ngModel)]="pet.id" name="id"/>
         <input type="text" hidden="true" class="form-control" id="owner" [(ngModel)]="pet.owner" name="owner"/>
-      </div>
+      </div> -->
       <!-- Owner Name -->
       <!-- <div class="form-group">
         <label for="owner" class="col-sm-2 control-label">Owner</label>
@@ -30,14 +30,14 @@
       </div>
       <br/> -->
       <!-- Pet Name -->
-      <div class="form-group ">
+      <!-- <div class="form-group ">
         <label for="name" class="col-sm-2 control-label">Pet Name</label>
         <div class="col-sm-10">
           <input id="name" name="name" class="form-control" type="text" [(ngModel)]="pet.name"/>
         </div>
-      </div>
+      </div> -->
       <!-- Pet Type -->
-      <div class="control-group">
+      <!-- <div class="control-group">
         <div class="form-group ">
           <label for="type" class="col-sm-2 control-label">Pet Type</label>
           <div class="col-sm-10">
@@ -48,18 +48,18 @@
             </select>
           </div>
         </div>
-      </div>
-      <!-- Register Date -->
+      </div> -->
+      <!-- Date -->
       <div class="form-group ">
-        <label class="col-sm-2 control-label">Register Date</label>
+        <label class="col-sm-2 control-label">Date</label>
         <div class="col-sm-10">
-          <input matInput [matDatepicker]="birthDateDatepicker" [ngModel]="pet.birthDate | date:'yyyy-MM-dd'" name="birthDate">
-          <mat-datepicker-toggle matSuffix [for]="birthDateDatepicker"></mat-datepicker-toggle>
-          <mat-datepicker #birthDateDatepicker></mat-datepicker>
+          <input matInput [matDatepicker]="dateDatepicker" [ngModel]="date | date:'yyyy-MM-dd'" name="date">
+          <mat-datepicker-toggle matSuffix [for]="dateDatepicker"></mat-datepicker-toggle>
+          <mat-datepicker #dateDatepicker></mat-datepicker>
         </div>
       </div>
       <!-- Vet Name -->
-      <div class="control-group">
+      <!-- <div class="control-group">
         <div class="form-group ">
           <label for="type" class="col-sm-2 control-label">Vet Name</label>
           <div class="col-sm-10">
@@ -73,7 +73,7 @@
             
           </div>
         </div>
-      </div>
+      </div> -->
       <div class="form-group">
         <div class="col-sm-offset-2 col-sm-10">
           <br/>
