--- a/src/app/users/signin/signin.component.html
+++ b/src/app/users/signin/signin.component.html
@@ -43,6 +43,13 @@
             <input id="password" name="password" class="form-control" type="text" [(ngModel)]="password"/>
           </div>
         </div>
+        <div class="form-group ">
+          <label for="password" class="col-sm-2 control-label">Vet or User</label>
+          <div class="col-sm-10">
+            <input type="radio" name="auth" value="1" [(ngModel)]="vet">Vet
+            <input type="radio" name="auth" value="2" [(ngModel)]="user" checked>User
+          </div>
+        </div>
         <div class="form-group">
           <div class="col-sm-offset-1 col-sm-9" >
             <div class="col-sm-1">
@@ -55,6 +62,7 @@
               <button class="btn btn-default " type="button" (click)="gotoMain()">Cancel</button>
             </div> -->
           </div>
+        
 
         </div>
       </div>
