--- a/src/app/users/signup/signup.component.html
+++ b/src/app/users/signup/signup.component.html
@@ -36,20 +36,20 @@
 <div class="container-fluid">
   <div class="container xd-container">
     <h2>User Signup</h2>
-    <form id="signup" class="form-horizontal" (ngSubmit)="onSubmit(signupForm.value)" #signupForm="ngForm">
+    <form class="form-horizontal" (ngSubmit)="onSubmit(signupForm.value)" #signupForm="ngForm">
       <div class="form-group has-feedback">
-        <label for="firstName" class="col-sm-2 control-label"> Username</label>
+        <label for="username" class="col-sm-2 control-label"> Username</label>
         <div class="col-sm-10">
           <input type="text" class="form-control" id="username" [(ngModel)]="user.username" minlength="2" required name="username" #usertName="ngModel"/>
         </div>
       </div>
       <div class="form-group has-feedback">
-        <label for="lastName" class="col-sm-2 control-label">Password</label>
+        <label for="password" class="col-sm-2 control-label">Password</label>
         <div class="col-sm-10">
-          <input type="text" class="form-control" id="password" [(ngModel)]="user.password" name="password" minlength="2" required #password="ngModel"/>
+          <input type="password" class="form-control" id="password" [(ngModel)]="user.password" name="password" minlength="2" required #password="ngModel"/>
         </div>
       </div>
-<!--       
+      
       <div class="form-group has-feedback">
         <label for="firstName" class="col-sm-2 control-label">First Name</label>
         <div class="col-sm-10">
@@ -77,10 +77,9 @@
       <div class="form-group has-feedback">
         <label for="telephone" class="col-sm-2 control-label">Telephone</label>
         <div class="col-sm-10">
-          <input type="text" class="form-control" id="telephone" [(ngModel)]="owner.telephone" name="telephone" minlength="2" required #telephone="ngModel"/>
+          <input type="text" class="form-control" id="telephone" [(ngModel)]="owner.telephone" name="telephone" minlength="2" required maxlength="10" required #telephone="ngModel"/>
         </div>
       </div>
-       -->
       <div class="form-group">
         <div class="col-sm-offset-2 col-sm-10">
           <br/>
