--- a/src/app/appointment/appointment-list/appointment-list.component.html
+++ b/src/app/appointment/appointment-list/appointment-list.component.html
@@ -14,33 +14,16 @@
         </thead>
 
         <tbody>
-        <!-- <tr *ngFor="let owner of owners"> -->
-          <!-- <td class="ownerFullName"><a routerLink="/owners/{{owner.id}}" routerLinkActive="active"
-                                       (click)="onSelect(owner)">{{ owner.firstName }} {{ owner.lastName }}</a></td>
-          <td>{{ owner.address }}</td>
-          <td>{{ owner.city }}</td>
-          <td>{{ owner.telephone }}</td> -->
         <tr *ngFor="let visit of visits">
           <td>{{ visit.date }}</td>
           <td>{{ visit.description}}</td>
-
-          <!-- <td>
-        <tr *ngFor="let pet of owner.pets">
-          {{ pet.name }}
-        </tr>
-        </td> -->
         <td>
-          <!-- <button class="btn btn-default" (click)="editVisit(visit)">Edit Appointment</button> -->
-          <button class="btn btn-default" (click)="deleteVisit(visit)">Delete Appointment</button>
+          <button class="btn btn-default" (click)="deleteVisit(visit)">Cancel Appointment</button>
         </td>
         </tr>
 
         </tbody>
       </table>
-      <!-- <div>
-        <button class="btn btn-default" (click)="addAppointment(pet)">Add Appointment</button>
-  
-      </div> -->
     </div>
   
   </div>
