--- a/src/app/users/signin/signin.component.html
+++ b/src/app/users/signin/signin.component.html
@@ -1,9 +1,9 @@
 <div class="container-fluid">
   <div class="container xd-container">
-    <div class="alert alert-info" >
+    <!-- <div class="alert alert-info" >
       <strong>Administrator （Vet）</strong> - U: daisy P: 000000<br/>
       <strong>Normal User</strong> - Please go to sign up page to register your account
-    </div>
+    </div> -->
     <h2><i class="glyphicon glyphicon-log-in"></i>&emsp;Enter Username and Password</h2>
     <form id="signin" class="form-horizontal" (ngSubmit)="onSubmit(signinForm.value)" #signinForm="ngForm">
       <div class="form-group has-feedback">
