--- a/src/app/vets/vet-edit/vet-edit.component.html
+++ b/src/app/vets/vet-edit/vet-edit.component.html
@@ -41,6 +41,16 @@
           <span class="help-block" *ngIf="lastNameCtrl.dirty && lastNameCtrl.hasError('minlength')">Last name must be at least 1 characters long</span>
         </div>
       </div>
+      <div class="form-group has-feedback" [class.has-success]="telephone.dirty && telephone.valid" [class.has-error]="telephone.dirty && !telephone.valid">
+        <label for="telephone" class="col-sm-2 control-label">Telephone</label>
+        <div class="col-sm-10">
+          <input type="text" class="form-control" id="telephone" [(ngModel)]="vet.telephone" name="telephone" required maxlength="10" pattern="^[0-9]{0,10}$" #telephone="ngModel"/>
+          <span class="glyphicon form-control-feedback" [class.glyphicon-ok]="telephone.valid" [class.glyphicon-remove]="!telephone.valid" aria-hidden="true"></span>
+          <span class="help-block" *ngIf="telephone.dirty && telephone.hasError('required')">Phone number is required</span>
+          <span class="help-block" *ngIf="telephone.dirty && telephone.hasError('maxlength')">Phone number cannot be more than 10 digits long</span>
+          <span class="help-block" *ngIf="telephone.dirty && telephone.hasError('pattern')" >Phone number only accept digits</span>
+        </div>
+      </div>
       <div class="control-group">
         <div class="form-group ">
           <label for="spec" class="col-sm-2 control-label">Specialties</label>
