--- a/src/app/vets/vet-edit/vet-edit.component.html
+++ b/src/app/vets/vet-edit/vet-edit.component.html
@@ -41,14 +41,13 @@
           <span class="help-block" *ngIf="lastNameCtrl.dirty && lastNameCtrl.hasError('minlength')">Last name must be at least 1 characters long</span>
         </div>
       </div>
-      <div class="form-group has-feedback" [class.has-success]="telephone.dirty && telephone.valid" [class.has-error]="telephone.dirty && !telephone.valid">
+      <div class="form-group has-feedback" [class.has-success]="telephoneCtrl.dirty && telephoneCtrl.valid" [class.has-error]="lastNameCtrl.dirty && !lastNameCtrl.valid">
         <label for="telephone" class="col-sm-2 control-label">Telephone</label>
         <div class="col-sm-10">
-          <input type="text" class="form-control" id="telephone" [(ngModel)]="vet.telephone" name="telephone" required maxlength="10" pattern="^[0-9]{0,10}$" #telephone="ngModel"/>
-          <span class="glyphicon form-control-feedback" [class.glyphicon-ok]="telephone.valid" [class.glyphicon-remove]="!telephone.valid" aria-hidden="true"></span>
-          <span class="help-block" *ngIf="telephone.dirty && telephone.hasError('required')">Phone number is required</span>
-          <span class="help-block" *ngIf="telephone.dirty && telephone.hasError('maxlength')">Phone number cannot be more than 10 digits long</span>
-          <span class="help-block" *ngIf="telephone.dirty && telephone.hasError('pattern')" >Phone number only accept digits</span>
+          <input type="text" class="form-control" id="telephone" name="telephone" formControlName="telephone" maxlength="10"/>
+          <span class="glyphicon form-control-feedback" [class.glyphicon-ok]="telephoneCtrl.valid" [class.glyphicon-remove]="!telephoneCtrl.valid" aria-hidden="true"></span>
+          <span class="help-block" *ngIf="telephoneCtrl.dirty && telephoneCtrl.hasError('required')">Last name is required</span>
+          <span class="help-block" *ngIf="telephoneCtrl.dirty && telephoneCtrl.hasError('maxlength')">Last name must be at most 10 characters long</span>
         </div>
       </div>
       <div class="control-group">
