--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -39,6 +39,18 @@
                 Info</span></a></li>
         </ul>
       </li>
+      
+      <li class="dropdown">
+        <a data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Veterinarians<span
+            class="caret"></span>
+        </a>
+        <ul class="dropdown-menu">
+          <li><a routerLink="/vets"><span class="glyphicon glyphicon-search" aria-hidden="true"></span><span>
+                All</span></a>
+          </li>
+        </ul>
+      </li>
+
       <li class="dropdown">
         <a class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true"
           aria-expanded="false">Appointment<span class="caret"></span>
