--- a/src/app/vets/vet-list/vet-list.component.html
+++ b/src/app/vets/vet-list/vet-list.component.html
@@ -18,7 +18,6 @@
 
 <div class="container-fluid">
   <div class="container xd-container">
-
     <h2><i class="glyphicon glyphicon-eye-open"  style="color:#5D6D7E "></i> Veterinarians</h2>
 
     <table id="vets" class="table table-striped">
@@ -41,14 +40,15 @@
           </div>
         </td>
         <td>
-          <button class="btn btn-default" (click)="editVet(vet)">Edit Vet</button>
-          <button class="btn btn-default" (click)="deleteVet(vet)">Delete Vet</button>
+          <div *ngIf="isVet"> 
+            <button class="btn btn-default" (click)="editVet(vet)">Edit Vet</button>
+            <button class="btn btn-default" (click)="deleteVet(vet)">Delete Vet</button>
+          </div>       
         </td>
       </tr>
       </tbody>
     </table>
     <div>
       <button class="btn btn-default" (click)="gotoHome()">Home</button>
-      <button class="btn btn-default" (click)="addVet()">Add Vet</button>
-    </div>
+      <button class="btn btn-default" (click)="addVet()" *ngIf="isVet">Add Vet</button>
   </div>
