--- a/src/app/vets/vet-list/vet-list.component.html
+++ b/src/app/vets/vet-list/vet-list.component.html
@@ -18,15 +18,14 @@
 
 <div class="container-fluid">
   <div class="container xd-container">
-
     <h2><i class="glyphicon glyphicon-eye-open"  style="color:#5D6D7E "></i> Veterinarians</h2>
 
     <table id="vets" class="table table-striped">
       <thead>
       <tr>
         <th>Name</th>
-        <th>Telephone</th>
         <th>Specialties</th>
+        <th>Telephone</th>
         <th></th>
         <th></th>
         <th></th>
@@ -38,27 +37,22 @@
           {{ vet.firstName }} {{ vet.lastName }}
         </td>
         <td>
-          {{ vet.telephone }}
-        </td>
-        <td>
           <div *ngFor="let spec of vet.specialties">
             {{ spec.name }}
           </div>
         </td>
-        <!-- <td>
-          <div *ngFor="let vet of vets">
-          {{ vet.telephone }}
-          </div>
-        </td> -->
-        <td>
+        <td>   
+          <!-- <div *ngFor="let spec of vet.telephone"> -->
+            {{ vet.telephone }}
+        </td>
+        <div *ngIf="isVet"> 
           <button class="btn btn-default" (click)="editVet(vet)">Edit Vet</button>
           <button class="btn btn-default" (click)="deleteVet(vet)">Delete Vet</button>
-        </td>
+        </div>    
       </tr>
       </tbody>
     </table>
     <div>
       <button class="btn btn-default" (click)="gotoHome()">Home</button>
-      <button class="btn btn-default" (click)="addVet()">Add Vet</button>
-    </div>
+      <button class="btn btn-default" (click)="addVet()" *ngIf="isVet">Add Vet</button>
   </div>
